@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - documentation
+  - msys_run does an exit(non-zero) on child failure
 
 0.01      2013-12-07 13:37:22 -0500
   - initial version
